--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
     <head>
         <title> Thí Vua Lấy Tốt </title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet"> -->
         <link rel="icon" href="https://raw.githubusercontent.com/Thi-Vua-Lay-Tot/Thi-Vua-Lay-Tot.github.io/master/images/favicon.ico" type="image/x-icon" />
     </head>
     <body>
+        <div id="dark-overlay"></div>
         <header>
-            <nav>
-                <a href="./index.html">Trang chủ</a>
-                <a href="./about.html">Giới thiệu</a>
-                <a href="./list.html">Các danh sách</a>
-                <a href="./webs.html">Các trang mạng</a>
-            </nav>
+            
+            <a class="nav-but" href="#">Trang chủ</a>
+            <a class="nav-but" href="#">Các danh sách</a>
+            <a class="nav-but" href="#">Các trang mạng</a>
+            <a class="nav-but" href="#">Blog</a>
+            <a class="nav-but" href="#">Vlog</a>
+            <a class="nav-but" href="#">Game</a>
+            <a class="nav-but" href="#">Đội của chúng tôi</a>
+        
         </header>
-		<style>
+        <div id="intro-overlay">
+            <div class="overlay-content">
+                <img src="images/tải xuống (9).jpg" width="100px" alt="">
+                <h1>Chào mừng bạn đã đến với trang web
+                    <br>Thí Vua Lấy Tốt</h1>
+                <button onclick="closeIntro()">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="continue" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l14 0" /><path d="M15 16l4 -4" /><path d="M15 8l4 4" /></svg></button>
+            </div>
+        </div>
+        <script src="script.js"></script>
+	<!-- <style>
             body,h1,h2,h3,h4,h5 {
                 font-family: "Raleway", sans-serif
             }
@@ -27,8 +44,7 @@
                 vertical-align: middle;
             }
             footer {
-                background-color: #00FFKF;
-                padding: 5px;
+                padding: 4.5px;
                 margin-left: auto;
                 margin-top: auto;
                 position: fixed;
@@ -36,29 +52,31 @@
                 right: 0;
                 width: 100%;
             }
-        </style>
-		
-		<main role="main">
+        </style> -->
+
+	    <!-- <main role="main">
             <h1 align="center">Chào mừng bạn đã ghé thăm trang web Thí Vua Lấy Tốt</h1>
-			<h2>Đang thử nghiệm...<div class="ld ld-ring ld-spin-fast" style="font-size:64px;color:#8da"></div></h2>
-            <p align="center">
-				<a href="https://www.youtube.com/@TungJohnPlayingChess"><img src="https://img.shields.io/badge/-Youtube-%23EA4335?style=for-the-badge&logo=youtube&logoColor=white" target="_blank"></a>
-				<a href="https://www.facebook.com/TungJohn2005" target="_blank"><img src="https://img.shields.io/badge/-Facebook-%231DA1F2?style=for-the-badge&logo=facebook&logoColor=white" target="_blank"></a>
-                <a href="https://clubs.chess.com/GkQy"> <img src="https://img.shields.io/badge/-Chess.com-11111?logo=chess.com&logoColor=11111" target="_blank"> </a>
-				<a href="https://lichess.org/team/thi-vua-lay-tot-tungjohn-playing-chess"><img src="https://img.shields.io/badge/-Lichess-050505?style=flat-square&logo=Lichess&logoColor=white" target="_blank"></a>
-				<a href="https://lishogi.org/team/thi-vua-lay-tot-tungjohn-playing-shogi"><img src="https://img.shields.io/badge/-Lishogi-050505?style=flat-square&logo=Lishogi&logoColor=white" target="_blank"></a>
-				<a href="https://lidraughts.org/team/thi-vua-lay-quan-tungjohn-playing-draughts"><img src="https://img.shields.io/badge/-Lidraughts-050505?style=flat-square&logo=Lidraughts&logoColor=white" target="_blank"></a>
-				<a href="https://playstrategy.org/team/thi-vua-lay-tot-tungjohn-playing-chess"><img src="https://img.shields.io/badge/-PlayStrategy-050505?style=flat-square&logo=PlayStrategy&logoColor=white" target="_blank"></a>
-				<a href="https://www.facebook.com/TungJohn2005"><img src="https://img.shields.io/badge/-Facebook-00B2FF?style=flat-square&logo=Facebook&logoColor=white" target="_blank"> </a>
-			<p>
+            <h3 align="center">Hello, xin chào các bạn, rất cảm ơn vì bạn đã ghé thăm. Chúng ta ở đây để cùng chia sẻ một niềm đam mê, đó là cờ vua. Bạn có thể tìm mọi thứ hấp dẫn về bộ môn cờ vua, từ tin tức cờ vua, các ván đấu nổi tiếng, các mẹo, thủ thuật chơi cờ vua.</h3>
+            <p align="center">Hãy xem phần giới thiệu về TungJohn ở Video phía dưới</p>
+            <p align="center"><iframe width="555" height="314" src="https://www.youtube.com/embed/E7RW7r4mJts?si=ZYoMlrgKvBXYcvIA" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+            <p align="center">Hãy đăng ký kênh hoặc theo dõi nếu bạn thích nhé!</p>
+                <p align="center">
+                    <a href="https://www.youtube.com/channel/UCvNW1NAWWjblgrP6JQI4MbQ"><img src="https://img.shields.io/badge/-Youtube-EA4335?style=flat-square&logo=Youtube&logoColor=white" target="_blank"></a>
+                    <a href="https://www.facebook.com/TungJohn2005"><img src="https://img.shields.io/badge/-Facebook-00B2FF?style=flat-square&logo=Facebook&logoColor=white" target="_blank"> </a>
+                    <a href="https://www.twitch.tv/tungjohnplayingchess"><img src="https://img.shields.io/badge/-Twitch-8803fc?style=flat-square&logo=Twitch&logoColor=white" target="_blank"> </a>
+                    <a href="https://www.tiktok.com/@tungjohn2005"><img src="https://img.shields.io/badge/-Tiktok-080808?style=flat-square&logo=Tiktok&logoColor=white" target="_blank"> </a>
+                    <a href="https://lichess.org/@/Tungjohn2005"><img src="https://img.shields.io/badge/-Lichess-ffffff?style=flat-square&logo=Lichess&logoColor=black" target="_blank"> </a>
+                    <a href="https://www.chess.com/member/tungjohn2005"><img width="77" src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/NathanielGreen/php0hWd9E.png" target="_blank"></a>
+                    <a href="https://discord.gg/7vYq2gRCrv"><img src="https://dcbadge.vercel.app/api/server/7vYq2gRCrv?style=flat" target="_blank"> </a>
+                <p>
         </main>
-            <footer  align="center">
+        <footer align="center">
             <p>
                 <a href="https://github.com/orgs/Thi-Vua-Lay-Tot/people">
                   <img class="github-logo" src="https://github.com/fluidicon.png" alt="GitHub Icon">
                 </a>
                 Được xây dựng bởi <a href="https://www.chess.com/clubs/members/thi-vua-lay-tot-tungjohn-playing-chess?filterBy=isAdmin">Các quản trị viên câu lạc bộ Thí Vua Lấy Tốt</a>
             </p>
-        </footer>
+        </footer> -->
     </body>
 </html>
